--- a/devblog/devblog/client/index.html
+++ b/devblog/devblog/client/index.html
@@ -4,13 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TheDevBlog</title>
-    <style>
-        html,
-        body {}
-    </style>
+    <link data-trunk rel="copy-dir" href="assets/" />
+    <link data-trunk rel="copy-file" href="assets/imgs/me.png" />
 </head>
-
-<body>
-</body>
 
 </html>
