fix trunk update

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TheDevBlog</title>
+    <link data-trunk rel="rust" />
     <link data-trunk rel="copy-dir" href="assets/" />
     <link data-trunk rel="css" href="assets/fonts/font.css" />
     <link data-trunk rel="css" href="assets/styles/media.css" />
